--- a/web/IslandMap/IslandMap.html
+++ b/web/IslandMap/IslandMap.html
@@ -1,3 +1,7 @@
 <div>
-    {{ hako }}
+    <span v-for="(item, index) in imgs">
+        <img :src=item>
+    </span>
+    {{lands}}
+    {{foo}}
 </div>
