--- a/web/template.html
+++ b/web/template.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="img/style.css">
   <title>Vue.jsとTypeScriptのサンプル2</title>
 </head>
 <body>
