--- a/web/Login/Login.html
+++ b/web/Login/Login.html
@@ -1,5 +1,26 @@
-<div>
-    <island-map @setPoint="setPoint" :lands=lands>
-    </island-map>
-    <p>({{ x }}, {{ y }})</p>
+<div class="login">
+    <div class="header" v-if="island">
+        <span class="name">{{ island.name }}島</span>開発計画
+    </div>
+    <div class="main">
+        <div class="input">
+            <form @submit.prevent="submitCommand">
+                <input type="submit" value="計画送信">
+                <hr>
+                <div>パスワード</div>
+                <input type="password" name="password" :value='password'>
+                <div>計画番号</div>
+                <select name="number">
+                    <template v-for="n in settings.commandMax">
+                        <option :value="n">{{n}}</option>
+                    </template>
+                </select>
+                <hr>
+                <div>開発計画</div>
+            </form>
+        </div>
+        <island-map @setPoint="setPoint" :lands=lands>
+        </island-map>
+        <p>({{ x }}, {{ y }})</p>
+    </div>
 </div>
