--- a/web/NewIsland/NewIsland.html
+++ b/web/NewIsland/NewIsland.html
@@ -1,5 +1,5 @@
 <div>
-    <p class="err" v-if="err big">{{err}}</p>
+    <p class="err big" v-if="err">{{err}}</p>
     <div v-if="name" class="big center">
         <p>島を発見しました！！</p>
         <p><span class="name">「{{name}}島」</span>と命名します。</p>
