--- a/web/Island/Island.html
+++ b/web/Island/Island.html
@@ -1,4 +1,4 @@
 <div>
     <island-header :island=island></island-header>
-    <island-map :imgs=imgs :lands=lands :foo=foo></island-map>
+    <island-map :lands=lands></island-map>
 </div>
