IslandHeader: show money

--- a/web/IslandHeader/IslandHeader.html
+++ b/web/IslandHeader/IslandHeader.html
@@ -3,6 +3,7 @@
         <tr>
             <th>順位</th>
             <th>人口</th>
+            <th>資金</th>
             <th>食料</th>
             <th>面積</th>
             <th>農場規模</th>
@@ -12,6 +13,7 @@
         <tr>
             <td>{{island.rank}}</td>
             <td>{{island.pop+settings.unitPop}}</td>
+            <td>{{island.money+settings.unitMoney}}</td>
             <td>{{island.food+settings.unitFood}}</td>
             <td>{{island.area+settings.unitArea}}</td>
             <td>{{farm}}</td>
