--- a/web/Login/Login.html
+++ b/web/Login/Login.html
@@ -22,6 +22,18 @@
                         <option :value="item.id">{{ commandStr(item) }}</option>
                     </template>
                 </select>
+                <div>数量</div>
+                <select name="amount">
+                    <template v-for="n in 99">
+                        <option :value="n">{{n}}</option>
+                    </template>
+                </select>
+                <div>目標の島</div>
+                <select name="target" v-model="island.id">
+                    <template v-for="island in islands">
+                        <option :value="island.id">{{island.name}}</option>
+                    </template>
+                </select>
             </form>
         </div>
         <island-map @setPoint="setPoint" :lands=lands>
