--- a/web/Login/Login.html
+++ b/web/Login/Login.html
@@ -17,11 +17,15 @@
                 </select>
                 <hr>
                 <div>開発計画</div>
-                <select name="command">
+                <select name="command" v-model="kind">
                     <template v-for="item in commands">
                         <option :value="item.id">{{ commandStr(item) }}</option>
                     </template>
                 </select>
+                <div>コマンド入力</div>
+                <a @click="addCommand">追加</a>
+                <a @click="overCommand">上書き</a>
+                <a @click="delCommand">削除</a>
                 <div>座標</div>
                 <select name="x" v-model="x">
                     <template v-for="n in settings.islandSize">
@@ -35,13 +39,13 @@
                     </template>
                 </select>
                 <div>数量</div>
-                <select name="amount">
+                <select name="amount" v-model="arg">
                     <template v-for="n in 100">
                         <option :value="n-1">{{n-1}}</option>
                     </template>
                 </select>
                 <div>目標の島</div>
-                <select name="target" v-model="island.id">
+                <select name="target" v-model="target">
                     <template v-for="island in islands">
                         <option :value="island.id">{{island.name}}島</option>
                     </template>
@@ -52,12 +56,13 @@
         </island-map>
         <div class="commands">
             <div v-for="(c, i) in island.commands">
-                <a @click="comClick(i, $event)" v-bind:class="{selected : i === 0}">
+                <a @click="comClick(i, $event)" v-bind:class="{selected : i === 0, command: true}">
                     {{i+1}}.
                     <template v-if="c.kind === commands.donothing.id">
                         資金繰り
                     </template>
                     <template v-else>
+                        {{JSON.stringify(c)}}
                         <span>{{c.x}}, {{c.y}}</span>
                     </template>
                 </a>
