--- a/web/Login/Login.html
+++ b/web/Login/Login.html
@@ -56,7 +56,7 @@
         </island-map>
         <div class="commands">
             <div v-for="(c, i) in island.commands">
-                <a @click="comClick(i, $event)" v-bind:class="{selected : i === 0, command: true}">
+                <a @click="selectCmdPos(i+1)" v-bind:class="{selected : i === 0, command: true}">
                     {{i+1}}.
                     <template v-if="c.kind === commands.donothing.id">
                         資金繰り
