--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,4 @@
 <div>
-    <router-link to="home">トップへ戻る</router-link>
+    <router-link to="/">トップへ戻る</router-link>
     <router-view></router-view>
 </div>
