--- a/web/Login/Login.html
+++ b/web/Login/Login.html
@@ -67,7 +67,7 @@
                         {{getIslandNameFromId(c.target)}}島<span>({{c.x}}, {{c.y}})</span>へ{{getCommandName(c.kind)}}
                     </template>
                     <template v-else>
-                        {{JSON.stringify(c)}}
+                        {{JSON.stringify(c)}}<br>
                         <span>({{c.x}}, {{c.y}})</span>で{{getCommandName(c.kind)}}
                     </template>
                 </a>
