--- a/web/template.html
+++ b/web/template.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="img/style.css">
-  <title>Vue.jsとTypeScriptのサンプル2</title>
+  <link rel="icon" href="/img/land5.gif" type="image/gif" />
+  <title>hako.js</title>
 </head>
 <body>
   <div id="app"></div>
