show not camouflaged island when new

--- a/web/NewIsland/NewIsland.html
+++ b/web/NewIsland/NewIsland.html
@@ -4,5 +4,5 @@
         <p>島を発見しました！！</p>
         <p><span class="name">「{{name}}島」</span>と命名します。</p>
     </div>
-    <island v-if="id" :id="id"></island>
+    <island v-if="id" :id="id" :password="password"></island>
 </div>
