--- a/web/Login/Login.html
+++ b/web/Login/Login.html
@@ -10,14 +10,14 @@
                 <div>パスワード</div>
                 <input type="password" name="password" :value='password'>
                 <div>計画番号</div>
-                <select name="number" v-model="number">
+                <select name="number" v-model.number="number">
                     <template v-for="n in settings.commandMax">
                         <option :value="n">{{n}}</option>
                     </template>
                 </select>
                 <hr>
                 <div>開発計画</div>
-                <select name="command" v-model="kind">
+                <select name="command" v-model.number="kind">
                     <template v-for="item in commands">
                         <option :value="item.id">{{ commandStr(item) }}</option>
                     </template>
@@ -27,25 +27,25 @@
                 <a @click="overCommand">上書き</a>
                 <a @click="delCommand">削除</a>
                 <div>座標</div>
-                <select name="x" v-model="x">
+                <select name="x" v-model.number="x">
                     <template v-for="n in settings.islandSize">
                         <option :value="n-1">{{n-1}}</option>
                     </template>
                 </select>
                 ,&nbsp;
-                <select name="y" v-model="y">
+                <select name="y" v-model.number="y">
                     <template v-for="n in settings.islandSize">
                         <option :value="n-1">{{n-1}}</option>
                     </template>
                 </select>
                 <div>数量</div>
-                <select name="amount" v-model="arg">
+                <select name="amount" v-model.number="arg">
                     <template v-for="n in 100">
                         <option :value="n-1">{{n-1}}</option>
                     </template>
                 </select>
                 <div>目標の島</div>
-                <select name="target" v-model="target">
+                <select name="target" v-model.number="target">
                     <template v-for="island in islandsNames">
                         <option :value="island.id">{{island.name}}島</option>
                     </template>
