IslandMap: Show detail. Hakojima: bugfix

--- a/web/IslandMap/IslandMap.html
+++ b/web/IslandMap/IslandMap.html
@@ -4,9 +4,10 @@
     <template v-for="(items, indexy) in landMap">
         <img :src="'img/space'+ indexy + '.gif'" v-if="(indexy % 2) === 0"><!--
         --><template v-for="(item, indexx) in items">
-            <img :src=item @click="setPoint(indexx,indexy)">
+            <img :src=item.image @click="setPoint(indexx,indexy)" @mouseover="showNavi(item)">
         </template><!--
         --><img v-bind:src="'img/space'+ indexy + '.gif'" v-if="(indexy % 2) !== 0">
         <br>
     </template>
+    <div id="navi"></div>
 </div>
