--- a/web/Home/Home.html
+++ b/web/Home/Home.html
@@ -16,7 +16,7 @@
         </select>
 
         <div>パスワードをどうぞ！！</div>
-        <input type="password" v-model="password" :value=pass><br>
+        <input type="password" v-model="password"><br>
         <input type="submit" value="開発しに行く" name="OwnerButton">
     </form>
     <hr>
